2004-02-08  Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-resource.c
	When a group is deleted the resource removes it if it is its group
	* src/planner-group-dialog.[ch]
	undo/redo work for adding, modifying and removing groups

2004-02-02  Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-resource.[ch]
	Added mrp_resource_clone method that returns a new cloned resource object
	* src/planner-resource-view.c
	Use mrp_resource_clone to store the object in the undo deletion command
	New internal function to convert a string into a GValue using resource
	properties

2004-02-01  Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-application.c
	* libplanner/mrp-application.h
	* libplanner/mrp-object.c
	* libplanner/mrp-private.h
	* libplanner/mrp-project.c
	final implementation for the new object id system
	* src/planner-resource-view.c
	first use of the new object id system

2004-01-30  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* configure.in: enables resource usage (timetable) by default.

2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-application.[ch]
	new method to get the last uid associated with objects
	* libplanner/mrp-object.c
	get a new uid for new objects from mrp-application
	* libplanner/mrp-project.c
	clean the object uid code that is now in mrp-application
	* src/planner-resource-view.c
	first use of the new object id api

2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>

	* src/configure.in
	libgda disabled by default

2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-resource-view.c
	Solved a core dump when you remove a resource that is been edited
	inline.
	Added undo for the remove resource operation. Missing some properties
	in the undo yet, but we are going to start using object ids before
	going more far.

2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-group-dialog.c
	* src/planner-group-model.c
	* src/planner-group-model.h