@@ -1,3 +1,11 @@
+2004-02-10  Alvaro del Castillo  <acs@barrapunto.com>
+
+	* po/es.po
+	Use the same translation for manager (encargado) in all places
+	* src/planner-group-dialog.c
+	undo/redo for group default property
+	implemented the free function for undo/redo commands
+
 2004-02-08  Alvaro del Castillo  <acs@barrapunto.com>
 
 	* libplanner/mrp-resource.c
